# autoca

./: .gitignore  README  config.toml  pyproject.toml  shell.nix
autoca/: __init__.py  __main__.py  crypto.py  root.py  state.py  state_test.py  writer.py
autoca/primitives/: __init__.py  crypto.py  serde.py  structs.py  test.py  utils.py
debian/: changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
debian/upstream/: metadata.ex
