[tool.poetry]
name = "autoca"
version = "0.1.0"
description = ""
authors = ["Luca <luca@teapot.ovh>"]
license = "AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
OwnCA = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
